// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PolicySetOps createPolicySet() 1: Create non-existing policy set [FrodoTestPolicySet3] 1`] = `
{
  "applicationType": "iPlanetAMWebAgentService",
  "attributeNames": [],
  "conditions": [
    "Script",
    "AMIdentityMembership",
    "IPv6",
    "IPv4",
    "SimpleTime",
    "LEAuthLevel",
    "LDAPFilter",
    "AuthScheme",
    "Session",
    "AND",
    "AuthenticateToRealm",
    "ResourceEnvIP",
    "Policy",
    "OAuth2Scope",
    "SessionProperty",
    "OR",
    "Transaction",
    "NOT",
    "AuthLevel",
    "AuthenticateToService",
  ],
  "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "creationDate": 1696091552477,
  "description": "Frodo Test Policy Set Template",
  "displayName": "Frodo Test Policy Set Template",
  "editable": true,
  "entitlementCombiner": "DenyOverride",
  "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "lastModifiedDate": 1696091552477,
  "name": "FrodoTestPolicySet3",
  "resourceComparator": null,
  "resourceTypeUuids": [
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  ],
  "saveIndex": null,
  "searchIndex": null,
  "subjects": [
    "AuthenticatedUsers",
    "NOT",
    "Identity",
    "OR",
    "AND",
    "NONE",
    "Policy",
    "JwtClaim",
  ],
}
`;

exports[`PolicySetOps createPolicySet() 2: Create existing policy set [FrodoTestPolicySet4] 1`] = `
"Error creating policy set undefined
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 409
    Reason: Conflict
    Message: Application already exists"
`;

exports[`PolicySetOps deletePolicySet() 1: Delete existing policy set [FrodoTestPolicySet7] 1`] = `{}`;

exports[`PolicySetOps deletePolicySet() 2: Delete non-existing policy set [DoesNotExist] 1`] = `
"Error deleting policy set DoesNotExist
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 404
    Reason: Not Found
    Message: DoesNotExist application not found in realm."
`;

exports[`PolicySetOps exportPolicySet() 1: Export existing policy set w/o deps [FrodoTestPolicySet9] 1`] = `
{
  "meta": Any<Object>,
  "policy": {},
  "policyset": {
    "FrodoTestPolicySet9": {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": 1696091551858,
      "description": "Frodo Test Policy Set Template",
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1696091551858,
      "name": "FrodoTestPolicySet9",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
  },
  "resourcetype": {},
  "script": {},
}
`;

exports[`PolicySetOps exportPolicySet() 2: Export existing policy set w/ deps [FrodoTestPolicySet9] 1`] = `
{
  "meta": Any<Object>,
  "policy": {},
  "policyset": {
    "FrodoTestPolicySet9": {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": 1696091551858,
      "description": "Frodo Test Policy Set Template",
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1696091551858,
      "name": "FrodoTestPolicySet9",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
  },
  "resourcetype": {},
  "script": {},
}
`;

exports[`PolicySetOps exportPolicySet() 3: Export non-existing policy set [DoesNotExist] 1`] = `
"Error exporting policy set DoesNotExist
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 404
    Reason: Not Found
    Message: Unable to retrieve application under realm /alpha."
`;

exports[`PolicySetOps exportPolicySets() 1: Export all policy sets 1`] = `
{
  "meta": Any<Object>,
  "policy": {
    "FeatureStorePolicy": {
      "_id": "FeatureStorePolicy",
      "_rev": "1695913101552",
      "actionValues": {},
      "active": true,
      "applicationName": "FeatureStorePolicySet",
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": "2023-09-28T14:58:21.552Z",
      "description": "FeatureStorePolicy",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": "2023-09-28T14:58:21.552Z",
      "name": "FeatureStorePolicy",
      "resourceTypeUuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      "resources": [
        "https://www.example.com:443/*",
      ],
      "subject": {
        "type": "NONE",
      },
    },
    "Test Policy": {
      "_id": "Test Policy",
      "_rev": "1695912902746",
      "actionValues": {
        "GET": true,
        "POST": false,
      },
      "active": false,
      "applicationName": "test-policy-set",
      "condition": {
        "endDate": "2023:08:02",
        "endDay": "fri",
        "endTime": "11:59",
        "enforcementTimeZone": "GMT",
        "startDate": "2023:08:01",
        "startDay": "mon",
        "startTime": "12:00",
        "type": "SimpleTime",
      },
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": "2023-09-28T14:55:02.746Z",
      "description": "Test Policy Description",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": "2023-09-28T14:55:02.746Z",
      "name": "Test Policy",
      "resourceAttributes": [
        {
          "propertyName": "Test_Name",
          "propertyValues": [
            "Test_Value",
          ],
          "type": "Static",
        },
      ],
      "resourceTypeUuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      "resources": [
        "lorem://ipsum:dolor/sit",
      ],
      "subject": {
        "type": "NONE",
      },
    },
  },
  "policyset": {
    "FeatureStorePolicySet": {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "AMIdentityMembership",
        "AND",
        "AuthLevel",
        "AuthScheme",
        "AuthenticateToRealm",
        "AuthenticateToService",
        "IPv4",
        "IPv6",
        "LDAPFilter",
        "LEAuthLevel",
        "NOT",
        "OAuth2Scope",
        "OR",
        "Policy",
        "ResourceEnvIP",
        "Script",
        "Session",
        "SessionProperty",
        "SimpleTime",
        "Transaction",
      ],
      "createdBy": "id=8efaa5b6-8c98-4489-9b21-ee41f5589ab7,ou=user,ou=am-config",
      "creationDate": 1695912757709,
      "description": null,
      "displayName": "FeatureStorePolicySet",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=8efaa5b6-8c98-4489-9b21-ee41f5589ab7,ou=user,ou=am-config",
      "lastModifiedDate": 1695912757709,
      "name": "FeatureStorePolicySet",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AND",
        "AuthenticatedUsers",
        "Identity",
        "JwtClaim",
        "NONE",
        "NOT",
        "OR",
        "Policy",
      ],
    },
    "FrodoTestPolicySet1": {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": 1696091551114,
      "description": "Frodo Test Policy Set Template",
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1696091551114,
      "name": "FrodoTestPolicySet1",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
    "FrodoTestPolicySet3": {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": 1696091552477,
      "description": "Frodo Test Policy Set Template",
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1696091552477,
      "name": "FrodoTestPolicySet3",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
    "FrodoTestPolicySet4": {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": 1696091551323,
      "description": "Frodo Test Policy Set Template",
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1696091551323,
      "name": "FrodoTestPolicySet4",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
    "FrodoTestPolicySet5": {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": 1696091551475,
      "description": "Frodo Test Policy Set Template",
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1696091552630,
      "name": "FrodoTestPolicySet5",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
    "FrodoTestPolicySet7": {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": 1696091551677,
      "description": "Frodo Test Policy Set Template",
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1696091551677,
      "name": "FrodoTestPolicySet7",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
    "FrodoTestPolicySet9": {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": 1696091551858,
      "description": "Frodo Test Policy Set Template",
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1696091551858,
      "name": "FrodoTestPolicySet9",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
    "test-policy-set": {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "AMIdentityMembership",
        "AND",
        "AuthLevel",
        "AuthScheme",
        "AuthenticateToRealm",
        "AuthenticateToService",
        "IPv4",
        "IPv6",
        "LDAPFilter",
        "LEAuthLevel",
        "NOT",
        "OAuth2Scope",
        "OR",
        "Policy",
        "ResourceEnvIP",
        "Script",
        "Session",
        "SessionProperty",
        "SimpleTime",
        "Transaction",
      ],
      "createdBy": "id=fbdeb2a9-beb6-4a14-ae66-e35f16ce421d,ou=user,ou=am-config",
      "creationDate": 1693494279401,
      "description": "Test Policy Set Description",
      "displayName": "Test Policy Set",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1693495339089,
      "name": "test-policy-set",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AND",
        "AuthenticatedUsers",
        "Identity",
        "JwtClaim",
        "NONE",
        "NOT",
        "OR",
        "Policy",
      ],
    },
  },
  "resourcetype": {},
  "script": {},
}
`;

exports[`PolicySetOps importFirstPolicySet() 1: Import first policy set 1`] = `
{
  "applicationType": "iPlanetAMWebAgentService",
  "attributeNames": [],
  "conditions": [
    "Script",
    "AMIdentityMembership",
    "IPv6",
    "IPv4",
    "SimpleTime",
    "LEAuthLevel",
    "LDAPFilter",
    "AuthScheme",
    "Session",
    "AND",
    "AuthenticateToRealm",
    "ResourceEnvIP",
    "Policy",
    "OAuth2Scope",
    "SessionProperty",
    "OR",
    "Transaction",
    "NOT",
    "AuthLevel",
    "AuthenticateToService",
  ],
  "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "creationDate": 1696091553788,
  "description": "Frodo Test Policy Set Template",
  "displayName": "Frodo Test Policy Set Template",
  "editable": true,
  "entitlementCombiner": "DenyOverride",
  "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "lastModifiedDate": 1696091553788,
  "name": "FrodoTestPolicySet13",
  "resourceComparator": null,
  "resourceTypeUuids": [
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  ],
  "saveIndex": null,
  "searchIndex": null,
  "subjects": [
    "AuthenticatedUsers",
    "NOT",
    "Identity",
    "OR",
    "AND",
    "NONE",
    "Policy",
    "JwtClaim",
  ],
}
`;

exports[`PolicySetOps importPolicySet() 1: Import existing policy set [FrodoTestPolicySet11] 1`] = `
{
  "applicationType": "iPlanetAMWebAgentService",
  "attributeNames": [],
  "conditions": [
    "Script",
    "AMIdentityMembership",
    "IPv6",
    "IPv4",
    "SimpleTime",
    "LEAuthLevel",
    "LDAPFilter",
    "AuthScheme",
    "Session",
    "AND",
    "AuthenticateToRealm",
    "ResourceEnvIP",
    "Policy",
    "OAuth2Scope",
    "SessionProperty",
    "OR",
    "Transaction",
    "NOT",
    "AuthLevel",
    "AuthenticateToService",
  ],
  "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "creationDate": 1696091553690,
  "description": "Frodo Test Policy Set Template",
  "displayName": "Frodo Test Policy Set Template",
  "editable": true,
  "entitlementCombiner": "DenyOverride",
  "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "lastModifiedDate": 1696091553690,
  "name": "FrodoTestPolicySet11",
  "resourceComparator": null,
  "resourceTypeUuids": [
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  ],
  "saveIndex": null,
  "searchIndex": null,
  "subjects": [
    "AuthenticatedUsers",
    "NOT",
    "Identity",
    "OR",
    "AND",
    "NONE",
    "Policy",
    "JwtClaim",
  ],
}
`;

exports[`PolicySetOps importPolicySet() 2: Import non-existing policy set [DoesNotExist] 1`] = `"Policy set DoesNotExist not found in import data"`;

exports[`PolicySetOps importPolicySets() 1: Import all policy sets 1`] = `
{
  "applicationType": "iPlanetAMWebAgentService",
  "attributeNames": [],
  "conditions": [
    "Script",
    "AMIdentityMembership",
    "IPv6",
    "IPv4",
    "SimpleTime",
    "LEAuthLevel",
    "LDAPFilter",
    "AuthScheme",
    "Session",
    "AND",
    "AuthenticateToRealm",
    "ResourceEnvIP",
    "Policy",
    "OAuth2Scope",
    "SessionProperty",
    "OR",
    "Transaction",
    "NOT",
    "AuthLevel",
    "AuthenticateToService",
  ],
  "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "creationDate": 1696091553978,
  "description": "Frodo Test Policy Set Template",
  "displayName": "Frodo Test Policy Set Template",
  "editable": true,
  "entitlementCombiner": "DenyOverride",
  "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "lastModifiedDate": 1696091553978,
  "name": "FrodoTestPolicySet16",
  "resourceComparator": null,
  "resourceTypeUuids": [
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  ],
  "saveIndex": null,
  "searchIndex": null,
  "subjects": [
    "AuthenticatedUsers",
    "NOT",
    "Identity",
    "OR",
    "AND",
    "NONE",
    "Policy",
    "JwtClaim",
  ],
}
`;

exports[`PolicySetOps readPolicySet() 1: Get existing policy set [FrodoTestPolicySet1] 1`] = `
{
  "applicationType": "iPlanetAMWebAgentService",
  "attributeNames": [],
  "conditions": [
    "Script",
    "AMIdentityMembership",
    "IPv6",
    "IPv4",
    "SimpleTime",
    "LEAuthLevel",
    "LDAPFilter",
    "AuthScheme",
    "Session",
    "AND",
    "AuthenticateToRealm",
    "ResourceEnvIP",
    "Policy",
    "OAuth2Scope",
    "SessionProperty",
    "OR",
    "Transaction",
    "NOT",
    "AuthLevel",
    "AuthenticateToService",
  ],
  "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "creationDate": 1696091551114,
  "description": "Frodo Test Policy Set Template",
  "displayName": "Frodo Test Policy Set Template",
  "editable": true,
  "entitlementCombiner": "DenyOverride",
  "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "lastModifiedDate": 1696091551114,
  "name": "FrodoTestPolicySet1",
  "resourceComparator": null,
  "resourceTypeUuids": [
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  ],
  "saveIndex": null,
  "searchIndex": null,
  "subjects": [
    "AuthenticatedUsers",
    "NOT",
    "Identity",
    "OR",
    "AND",
    "NONE",
    "Policy",
    "JwtClaim",
  ],
}
`;

exports[`PolicySetOps readPolicySet() 2: Get non-existing policy set [DoesNotExist] 1`] = `
"Error reading policy set DoesNotExist
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 404
    Reason: Not Found
    Message: Unable to retrieve application under realm /alpha."
`;

exports[`PolicySetOps readPolicySets() 1: Get all policy sets 1`] = `
[
  {
    "applicationType": "iPlanetAMWebAgentService",
    "attributeNames": [],
    "conditions": [
      "AMIdentityMembership",
      "AND",
      "AuthLevel",
      "AuthScheme",
      "AuthenticateToRealm",
      "AuthenticateToService",
      "IPv4",
      "IPv6",
      "LDAPFilter",
      "LEAuthLevel",
      "NOT",
      "OAuth2Scope",
      "OR",
      "Policy",
      "ResourceEnvIP",
      "Script",
      "Session",
      "SessionProperty",
      "SimpleTime",
      "Transaction",
    ],
    "createdBy": "id=8efaa5b6-8c98-4489-9b21-ee41f5589ab7,ou=user,ou=am-config",
    "creationDate": 1695912757709,
    "description": null,
    "displayName": "FeatureStorePolicySet",
    "editable": true,
    "entitlementCombiner": "DenyOverride",
    "lastModifiedBy": "id=8efaa5b6-8c98-4489-9b21-ee41f5589ab7,ou=user,ou=am-config",
    "lastModifiedDate": 1695912757709,
    "name": "FeatureStorePolicySet",
    "resourceComparator": null,
    "resourceTypeUuids": [
      "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    ],
    "saveIndex": null,
    "searchIndex": null,
    "subjects": [
      "AND",
      "AuthenticatedUsers",
      "Identity",
      "JwtClaim",
      "NONE",
      "NOT",
      "OR",
      "Policy",
    ],
  },
  {
    "applicationType": "iPlanetAMWebAgentService",
    "attributeNames": [],
    "conditions": [
      "Script",
      "AMIdentityMembership",
      "IPv6",
      "IPv4",
      "SimpleTime",
      "LEAuthLevel",
      "LDAPFilter",
      "AuthScheme",
      "Session",
      "AND",
      "AuthenticateToRealm",
      "ResourceEnvIP",
      "Policy",
      "OAuth2Scope",
      "SessionProperty",
      "OR",
      "Transaction",
      "NOT",
      "AuthLevel",
      "AuthenticateToService",
    ],
    "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
    "creationDate": 1696091551114,
    "description": "Frodo Test Policy Set Template",
    "displayName": "Frodo Test Policy Set Template",
    "editable": true,
    "entitlementCombiner": "DenyOverride",
    "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
    "lastModifiedDate": 1696091551114,
    "name": "FrodoTestPolicySet1",
    "resourceComparator": null,
    "resourceTypeUuids": [
      "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    ],
    "saveIndex": null,
    "searchIndex": null,
    "subjects": [
      "AuthenticatedUsers",
      "NOT",
      "Identity",
      "OR",
      "AND",
      "NONE",
      "Policy",
      "JwtClaim",
    ],
  },
  {
    "applicationType": "iPlanetAMWebAgentService",
    "attributeNames": [],
    "conditions": [
      "Script",
      "AMIdentityMembership",
      "IPv6",
      "IPv4",
      "SimpleTime",
      "LEAuthLevel",
      "LDAPFilter",
      "AuthScheme",
      "Session",
      "AND",
      "AuthenticateToRealm",
      "ResourceEnvIP",
      "Policy",
      "OAuth2Scope",
      "SessionProperty",
      "OR",
      "Transaction",
      "NOT",
      "AuthLevel",
      "AuthenticateToService",
    ],
    "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
    "creationDate": 1696091551323,
    "description": "Frodo Test Policy Set Template",
    "displayName": "Frodo Test Policy Set Template",
    "editable": true,
    "entitlementCombiner": "DenyOverride",
    "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
    "lastModifiedDate": 1696091551323,
    "name": "FrodoTestPolicySet4",
    "resourceComparator": null,
    "resourceTypeUuids": [
      "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    ],
    "saveIndex": null,
    "searchIndex": null,
    "subjects": [
      "AuthenticatedUsers",
      "NOT",
      "Identity",
      "OR",
      "AND",
      "NONE",
      "Policy",
      "JwtClaim",
    ],
  },
  {
    "applicationType": "iPlanetAMWebAgentService",
    "attributeNames": [],
    "conditions": [
      "Script",
      "AMIdentityMembership",
      "IPv6",
      "IPv4",
      "SimpleTime",
      "LEAuthLevel",
      "LDAPFilter",
      "AuthScheme",
      "Session",
      "AND",
      "AuthenticateToRealm",
      "ResourceEnvIP",
      "Policy",
      "OAuth2Scope",
      "SessionProperty",
      "OR",
      "Transaction",
      "NOT",
      "AuthLevel",
      "AuthenticateToService",
    ],
    "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
    "creationDate": 1696091551475,
    "description": "Frodo Test Policy Set Template",
    "displayName": "Frodo Test Policy Set Template",
    "editable": true,
    "entitlementCombiner": "DenyOverride",
    "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
    "lastModifiedDate": 1696091551475,
    "name": "FrodoTestPolicySet5",
    "resourceComparator": null,
    "resourceTypeUuids": [
      "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    ],
    "saveIndex": null,
    "searchIndex": null,
    "subjects": [
      "AuthenticatedUsers",
      "NOT",
      "Identity",
      "OR",
      "AND",
      "NONE",
      "Policy",
      "JwtClaim",
    ],
  },
  {
    "applicationType": "iPlanetAMWebAgentService",
    "attributeNames": [],
    "conditions": [
      "Script",
      "AMIdentityMembership",
      "IPv6",
      "IPv4",
      "SimpleTime",
      "LEAuthLevel",
      "LDAPFilter",
      "AuthScheme",
      "Session",
      "AND",
      "AuthenticateToRealm",
      "ResourceEnvIP",
      "Policy",
      "OAuth2Scope",
      "SessionProperty",
      "OR",
      "Transaction",
      "NOT",
      "AuthLevel",
      "AuthenticateToService",
    ],
    "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
    "creationDate": 1696091551677,
    "description": "Frodo Test Policy Set Template",
    "displayName": "Frodo Test Policy Set Template",
    "editable": true,
    "entitlementCombiner": "DenyOverride",
    "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
    "lastModifiedDate": 1696091551677,
    "name": "FrodoTestPolicySet7",
    "resourceComparator": null,
    "resourceTypeUuids": [
      "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    ],
    "saveIndex": null,
    "searchIndex": null,
    "subjects": [
      "AuthenticatedUsers",
      "NOT",
      "Identity",
      "OR",
      "AND",
      "NONE",
      "Policy",
      "JwtClaim",
    ],
  },
  {
    "applicationType": "iPlanetAMWebAgentService",
    "attributeNames": [],
    "conditions": [
      "Script",
      "AMIdentityMembership",
      "IPv6",
      "IPv4",
      "SimpleTime",
      "LEAuthLevel",
      "LDAPFilter",
      "AuthScheme",
      "Session",
      "AND",
      "AuthenticateToRealm",
      "ResourceEnvIP",
      "Policy",
      "OAuth2Scope",
      "SessionProperty",
      "OR",
      "Transaction",
      "NOT",
      "AuthLevel",
      "AuthenticateToService",
    ],
    "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
    "creationDate": 1696091551858,
    "description": "Frodo Test Policy Set Template",
    "displayName": "Frodo Test Policy Set Template",
    "editable": true,
    "entitlementCombiner": "DenyOverride",
    "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
    "lastModifiedDate": 1696091551858,
    "name": "FrodoTestPolicySet9",
    "resourceComparator": null,
    "resourceTypeUuids": [
      "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    ],
    "saveIndex": null,
    "searchIndex": null,
    "subjects": [
      "AuthenticatedUsers",
      "NOT",
      "Identity",
      "OR",
      "AND",
      "NONE",
      "Policy",
      "JwtClaim",
    ],
  },
  {
    "applicationType": "iPlanetAMWebAgentService",
    "attributeNames": [],
    "conditions": [
      "AMIdentityMembership",
      "AND",
      "AuthLevel",
      "AuthScheme",
      "AuthenticateToRealm",
      "AuthenticateToService",
      "IPv4",
      "IPv6",
      "LDAPFilter",
      "LEAuthLevel",
      "NOT",
      "OAuth2Scope",
      "OR",
      "Policy",
      "ResourceEnvIP",
      "Script",
      "Session",
      "SessionProperty",
      "SimpleTime",
      "Transaction",
    ],
    "createdBy": "id=fbdeb2a9-beb6-4a14-ae66-e35f16ce421d,ou=user,ou=am-config",
    "creationDate": 1693494279401,
    "description": "Test Policy Set Description",
    "displayName": "Test Policy Set",
    "editable": true,
    "entitlementCombiner": "DenyOverride",
    "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
    "lastModifiedDate": 1693495339089,
    "name": "test-policy-set",
    "resourceComparator": null,
    "resourceTypeUuids": [
      "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    ],
    "saveIndex": null,
    "searchIndex": null,
    "subjects": [
      "AND",
      "AuthenticatedUsers",
      "Identity",
      "JwtClaim",
      "NONE",
      "NOT",
      "OR",
      "Policy",
    ],
  },
]
`;

exports[`PolicySetOps updatePolicySet() 1: Update existing policy set [FrodoTestPolicySet5] 1`] = `
{
  "applicationType": "iPlanetAMWebAgentService",
  "attributeNames": [],
  "conditions": [
    "Script",
    "AMIdentityMembership",
    "IPv6",
    "IPv4",
    "SimpleTime",
    "LEAuthLevel",
    "LDAPFilter",
    "AuthScheme",
    "Session",
    "AND",
    "AuthenticateToRealm",
    "ResourceEnvIP",
    "Policy",
    "OAuth2Scope",
    "SessionProperty",
    "OR",
    "Transaction",
    "NOT",
    "AuthLevel",
    "AuthenticateToService",
  ],
  "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "creationDate": 1696091551475,
  "description": "Frodo Test Policy Set Template",
  "displayName": "Frodo Test Policy Set Template",
  "editable": true,
  "entitlementCombiner": "DenyOverride",
  "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "lastModifiedDate": 1696091552630,
  "name": "FrodoTestPolicySet5",
  "resourceComparator": null,
  "resourceTypeUuids": [
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  ],
  "saveIndex": null,
  "searchIndex": null,
  "subjects": [
    "AuthenticatedUsers",
    "NOT",
    "Identity",
    "OR",
    "AND",
    "NONE",
    "Policy",
    "JwtClaim",
  ],
}
`;

exports[`PolicySetOps updatePolicySet() 2: Update non-existing policy set [FrodoTestPolicySet6] 1`] = `
"Error updating policy set undefined
  HTTP client error
    Code: ERR_BAD_REQUEST
    Status: 404
    Reason: Not Found
    Message: FrodoTestPolicySet6 not found."
`;
